<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010-2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">MusicFX</string>

    <!-- ControlPanelMusic strings -->
    <string name="no_effects">Effects not available.</string>
    <string name="main_toggle_effects_title">Audio effects</string>
    <string name="eq_dialog_title">Equalizer</string>
    <string name="headset_plug">Plug in headphones for these effects.</string>
    <string name="combo_device">Effects supported only on headphone playback.</string>
    <string name="bass_boost_strength">Bass boost</string>
    <string name="virtualizer_strength">Surround sound</string>
    <string name="pr_title">Reverb</string>
    <string name="pr_summary">Additional room reverberation effects</string>
    <string name="pr_dialog_title">Reverb preset</string>
    <string name="setup">Setup</string>

    <string name="normal">Normal</string>
    <string name="classical">Classical</string>
    <string name="dance">Dance</string>
    <string name="flat">Flat</string>
    <string name="folk">Folk</string>
    <string name="heavy_metal">Heavy Metal</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="jazz">Jazz</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="ci_extreme">Electronic</string>
    <string name="user">Custom</string>

    <string name="none">None</string>
    <string name="smallroom">SmallRoom</string>
    <string name="mediumroom">MediumRoom</string>
    <string name="largeroom">LargeRoom</string>
    <string name="mediumhall">MediumHall</string>
    <string name="largehall">LargeHall</string>
    <string name="plate">Plate</string>

    <string name="eq_custom">To customize, select "Custom"</string>
    <string name="power_on_prompt">Press the power button on the top-right.</string>

    <!-- title of control panel picker dialog [CHAR LIMIT=30] -->
    <string name="picker_title">Music effects control panel"</string>
    <string name="toggle_button_on">On</string>
    <string name="toggle_button_off">Off</string>

    <string name="drawer_item_speaker">Speaker</string>
    <string name="drawer_item_headset">Headphones</string>
    <string name="drawer_item_bluetooth">Bluetooth</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="stereowide_light">Light</string>
    <string name="stereowide_moderate">Moderate</string>
    <string name="stereowide_high">High</string>
    <string name="stereowide_none">None</string>
    <string name="sw_title">Stereo widener</string>

    <!-- Presets -->
    <string name="preset_menu">Presets</string>
    <string name="save_preset">Save preset</string>
    <string name="load_preset">Load preset</string>
    <string name="new_preset">New preset...</string>
    <string name="preset_save_toast">Preset saved</string>
    <string name="preset_load_toast">Preset loaded</string>
</resources>
