<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010-2011 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_speaker"
            android:title="@string/drawer_item_speaker"
            android:icon="@drawable/ic_speaker" />
        <item
            android:id="@+id/menu_headset"
            android:title="@string/drawer_item_headset"
            android:icon="@drawable/ic_headphones" />
        <item
            android:id="@+id/menu_bluetooth"
            android:title="@string/drawer_item_bluetooth"
            android:icon="@drawable/ic_bluetooth" />
    </group>

    <item android:title="@string/preset_menu">
        <menu>
            <item
                 android:id="@+id/save_preset"
                 android:title="@string/save_preset"
                 android:icon="@drawable/ic_save_preset"/>

            <item
                 android:id="@+id/load_preset"
                 android:title="@string/load_preset"
                 android:icon="@drawable/ic_load_preset"/>
        </menu>
    </item>
</menu>
